--- a/TOKS_lab1/TOKS_lab1.csproj
+++ b/TOKS_lab1/TOKS_lab1.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\EBaudrate.cs" />
+    <Compile Include="Enums\EDataBits.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
