--- a/TOKS_lab1/TOKS_lab1.csproj
+++ b/TOKS_lab1/TOKS_lab1.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="backend\SerialPortCommunicator.cs" />
     <Compile Include="Enums\EBaudrate.cs" />
     <Compile Include="Enums\EDataBits.cs" />
     <Compile Include="Form1.cs">
