--- a/lab3/HammingCodeProgram/HammingCodeProgram/HammingCodeProgram.vcxproj
+++ b/lab3/HammingCodeProgram/HammingCodeProgram/HammingCodeProgram.vcxproj
@@ -148,6 +148,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MyLib.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyLib.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
