--- a/lab3/CRCCodeExample/CRCCodeExample/CRCCodeExample.vcxproj
+++ b/lab3/CRCCodeExample/CRCCodeExample/CRCCodeExample.vcxproj
@@ -147,6 +147,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="MyLib.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyLib.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
