--- a/lab4/lab4/lab4.csproj
+++ b/lab4/lab4/lab4.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -62,6 +65,14 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="backend\exceptions\CannotEncodeByte.cs" />
+    <Compile Include="backend\exceptions\CannotFindStartSymbolException.cs" />
+    <Compile Include="backend\exceptions\CannotFindStopSymbolException.cs" />
+    <Compile Include="backend\exceptions\ManualException.cs" />
+    <Compile Include="backend\InternalLogger.cs" />
+    <Compile Include="backend\SerialPortCommunicator.cs" />
+    <Compile Include="Enums\EBaudrate.cs" />
+    <Compile Include="Enums\EDataBits.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -85,6 +96,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
