Enum views in comboboxes were added (Data bits, stop bits, parity, baudrate)

--- a/lab4/lab4/lab4.csproj
+++ b/lab4/lab4/lab4.csproj
@@ -73,6 +73,7 @@
     <Compile Include="backend\SerialPortCommunicator.cs" />
     <Compile Include="Enums\EBaudrate.cs" />
     <Compile Include="Enums\EDataBits.cs" />
+    <Compile Include="Enums\Utilities\EnumViewUtility.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
