--- a/lab5/lab5/lab5.csproj
+++ b/lab5/lab5/lab5.csproj
@@ -60,6 +60,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Backend\Exceptions\BadMessageLengthException.cs" />
     <Compile Include="Backend\SerialPackage.cs" />
     <Compile Include="ViewModels\MainWindowWm.cs" />
     <Page Include="MainWindow.xaml">
