--- a/lab5/lab5/lab5.csproj
+++ b/lab5/lab5/lab5.csproj
@@ -37,6 +37,9 @@
     <StartupObject>lab5.App</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DataStructures, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ConcurrentDataStructures.0.2.0\lib\net45\DataStructures.dll</HintPath>
+    </Reference>
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
     </Reference>
