ConcurrentPriorityQueue was replaced with Microsoft realisation

--- a/lab5/lab5/lab5.csproj
+++ b/lab5/lab5/lab5.csproj
@@ -37,9 +37,6 @@
     <StartupObject>lab5.App</StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DataStructures, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ConcurrentDataStructures.0.2.0\lib\net45\DataStructures.dll</HintPath>
-    </Reference>
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
     </Reference>
@@ -63,6 +60,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Backend\External\ConcurrentPriorityQueue.cs" />
     <Compile Include="Backend\Exceptions\BadMessageLengthException.cs" />
     <Compile Include="Backend\SerialPackage.cs" />
     <Compile Include="ViewModels\MainWindowWm.cs" />
